--- a/index.html
+++ b/index.html
@@ -33,12 +33,41 @@
     <div id="map"></div>
   </div>
 
+  <button class="btn btn-default" id="askButton">Ask for location</button>
+
+  <div id="target"></div>
+
   <script>
     // Main Javascript for map
     let map;
     // storing markers in array for use later
     let markersArray = [];
 
+    // geolocation
+    var target = document.getElementById('target');
+    var watchId;
+
+    function appendLocation(location, verb) {
+      verb = verb || 'updated';
+      var newLocation = document.createElement('p');
+      newLocation.innerHTML = 'Location ' + verb + ': <a href="https://maps.google.com/maps?&z=15&q=' + location.coords.latitude + '+' + location.coords.longitude + '&ll=' + location.coords.latitude + '+' + location.coords.longitude +
+        '" target="_blank">' + location.coords.latitude + ', ' + location.coords.longitude + '</a>';
+      target.appendChild(newLocation);
+    }
+
+    if ('geolocation' in navigator) {
+      document.getElementById('askButton').addEventListener('click', function() {
+        navigator.geolocation.getCurrentPosition(function(location) {
+          appendLocation(location, 'fetched');
+        });
+        watchId = navigator.geolocation.watchPosition(appendLocation);
+      });
+    } else {
+      target.innerText = 'Geolocation API not supported.';
+    }
+
+
+    // map
     let chicago = {
       lat: 41.8781,
       lng: -87.6298
@@ -68,6 +97,13 @@
           let location = {
             lat: parseFloat(v.latitude),
             lng: parseFloat(v.longitude)
+          }
+
+          function distance(lat, lng, lat0, lng0) {
+            let deglen = 110.25
+            let x = lat - lat0
+            let y = (lng - lng0) * cos(lat0)
+            return deglen * sqrt(x * x + y * y)
           }
 
           if (v.state) {
