--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             })
 
             let infowindow = new google.maps.InfoWindow({
-              content: v.district_name + '<br/>Address: ' + v.address
+              content: 'District Name: ' + v.district_name + '<br/>Address: ' + v.address
             });
 
             marker.addListener('click', function(results1) {
